--- a/style.css
+++ b/style.css
@@ -1,84 +1,132 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap');
-html{
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: beige;
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap");
+html {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: beige;
 }
-body{
-    margin: 0;
-    font-family: 'Work Sans', sans-serif;
+body {
+  margin: 0;
+  font-family: "Work Sans", sans-serif;
 }
-#player{
-    width: 60%;
-    margin: auto;
-    padding: 2rem;
+#player {
+  width: 60%;
+  margin: auto;
+  padding: 2rem;
 }
-#controls{
-    background-color: rgb(204, 195, 184);
-    border: 2px solid ;
-    width: 60%;
-    margin: auto;
-    padding: 2rem;
+#controls {
+  background-color: rgb(204, 195, 184);
+  border: 2px solid;
+  width: 60%;
+  margin: auto;
+  padding: 2rem;
 }
-#songsWrapper{
-    width: 60%;
-    border: none;
-    margin: auto;
-    text-align: left;
-    padding: 1rem;
-    font-size: 1.2rem;
+#headphones {
+  height: 20rem;
+  margin: 3rem;
 }
-h2{
-    font-weight: bold;
-    font-size: 2rem;
+#songsWrapper {
+  width: 60%;
+  border: none;
+  margin: auto;
+  text-align: left;
+  padding: 1rem;
+  font-size: 1.2rem;
 }
-li{
-    cursor: pointer;
-    padding: 1rem;
+h2 {
+  font-weight: bold;
+  font-size: 2rem;
 }
-li:hover{
-    background-color: white;
-    color: skyblue;
+li {
+  cursor: pointer;
+  padding: 1rem;
 }
-#volume > span{
-    font-size: 2rem;
-    cursor: pointer;
+li:hover {
+  background-color: white;
+  color: skyblue;
 }
-#controlsWrapper > span{
-    cursor: pointer;
-    font-size: 5rem;
+#volume > span {
+  font-size: 2rem;
+  cursor: pointer;
 }
-p{
-    font-size: 1.3rem;
+#progressBar {
+  margin-bottom: 3rem;
 }
-progress{
-    width: 50%;
-    height: 1rem;
-    background-color: white;
-    color: rgb(248, 242, 242);
-    border: none;
-    border-radius: 3rem;
-    margin-bottom: 22px;
+#controlsWrapper > span {
+  cursor: pointer;
+  font-size: 5rem;
 }
-img{
-    height: 50%;
-    width: 50%;
+p {
+  font-size: 1.3rem;
+}
+progress {
+  width: 50%;
+  height: 1rem;
+  background-color: white;
+  color: rgb(248, 242, 242);
+  border: none;
+  border-radius: 3rem;
+  margin-bottom: 22px;
+}
+img {
+  height: 50%;
+  width: 50%;
 }
 
-.pulse{
-    animation: pulse;
-    animation-duration: 0.4s;
+.pulse {
+  animation: pulse;
+  animation-duration: 0.4s;
+}
+#addSongWrapper {
+  text-align: center;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.3rem;
+}
+#addSongWrapper label {
+  font-size: 1.5rem;
+  /* font-weight: bold; */
+  border: 2px solid black;
+  padding: 8px 20px;
+  background-color: rgb(204, 195, 184);
+  cursor: pointer;
+  border-radius: 7px;
+}
+#addSongWrapper label:hover{
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    scale: 110%;
+}
+#addSong {
+  /* padding: 8px;
+  padding-left: 11px;
+  border: 2px solid rgb(248, 242, 242);
+  border-radius: 7px;
+  font-size: 1.3rem;
+  cursor: pointer;
+  background-color: rgb(204, 195, 184);
+  text-align: center;
+  width: 30%; */
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
-@keyframes pulse{
-    from{
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(0.8);
-    }
-    to {
-        transform: scale(1);
-    }
+@keyframes pulse {
+  from {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  to {
+    transform: scale(1);
+  }
 }
